<resources>
    <string name="app_name" translatable="false">TrackMyCar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="track_my_car" translatable="false">Track My Car</string>
    <string name="app_message">Instant car tracking app.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="author">Developed by Renan Ribeiro Brando</string>
    <string name="contact">Contact me now</string>
    <string name="keep_connected">Keep Connected</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">Set your phone to track your car with our app</string>
    <string name="slide_2_title">Set Up</string>
    <string name="slide_2_desc">Configure your traker to work anyway you want</string>
    <string name="slide_3_title">Keep Updated</string>
    <string name="slide_3_desc">See your car\'s info in your hand</string>
    <string name="play_again_desc">To see the welcome slider again, go to Settings -> apps -> my tracker -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_tracker_number">Tracker number</string>
    <string name="pref_default_tracker_number" translatable="false">+5511953864738</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="loading">Loading...</string>

    <string name="facebook_app_id" translatable="false">1321070847992186</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1321070847992186</string>
    <string name="creating_account">Creating Account...</string>
    <string name="login_failed">Login failed</string>
    <string name="at_least">at least 3 characters</string>
    <string name="valid_address">enter a valid email address</string>
    <string name="between_chars">between 4 and 10 alphanumeric characters</string>
    <string name="exit">Exit</string>
    <string name="exit_sure">Are you sure you want to exit?</string>
    <string name="authenticating">Authenticating...</string>
    <string name="your_location">Your Location</string>
    <string name="users">User</string>
    <string name="vehicles">Vehicles</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="logout_sure">Are you sure you want to logout?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="facebook" translatable="false">facebook</string>
    <string name="google" translatable="false">google</string>
    <string name="others">others</string>

    <string name="tracker_id_notification">Tracker number:</string>
    <string name="tracker_content_notification">Your vehicle has been found.</string>
    <string name="was_here">I was driving here.</string>
    <string name="share_location">Share your location!</string>
    <string name="granted">granted</string>
    <string name="delete_user">Are you sure you want to delete</string>
    <string name="invalid_input">Invalid input</string>
    <string name="wait">Wait</string>
    <string name="searching_data">Searching data in the database</string>
    <string name="more">more</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="license_plate">License Plate</string>
    <string name="year">Year</string>
    <string name="color">Color</string>

</resources>
